--- a/web-application/client/pages/users/views/ContributionView.css
+++ b/web-application/client/pages/users/views/ContributionView.css
@@ -6,14 +6,16 @@
 .contribution-view .intro{
     margin: 0 auto;
     max-width: 650px;
+    padding: 10px;
     font-size: 16px;
     line-height: 1.7em;
 }
 .contribution-view .contribution-grid {
     display: grid;
     margin: 50px auto 0 auto;
-    grid-template-columns: repeat(auto-fit, 260px);
-
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    align-items: center;
+    justify-items: center;
 }
 .contribution-view .additional-contributions {
     margin: 20px auto;
@@ -22,6 +24,7 @@
 .contribution-view__one-time {
     max-width: 650px;
     margin: 50px auto;
+    padding: 10px;
     font-size: 16px;
     line-height: 1.7em;
 }
